--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "description": "A starter project for AngularJS",
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
+  "dependencies": {
+    "bootstrap": "~3.0",
+    "auth0-angular": "~4.1",
+    "a0-angular-storage": "0.0.15",
+    "angular-jwt": "~0.0.9",
+    "angular-input-stars": "~1.5"
+  },
   "devDependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1",
